# rust-vue-template

./: .gitignore  LICENSE  README.md
app/: README.md  package-lock.json  package.json  quasar.conf.js
app/src/: App.vue  vue-property-decorator.d.ts
app/src/boot/: axios.ts
app/src/components/: OwnPage.vue
app/src/css/: app.scss  quasar.variables.scss
app/src/layouts/: MainLayout.vue
app/src/pages/: 404.vue  Demo.vue  Login.vue
app/src/plugins/: http-commons.ts
app/src/router/: index.ts  routes.ts
app/src/store/: index.ts
app/src/store/modules/: LocationStore.ts
app/src/types/api/: ApiMethods.ts  ApiTypes.ts  WebsocketMethods.ts  WebsocketTypes.ts
app/src/utils/: Ids.ts
core/: Cargo.toml  README.md
core/src/: application.rs  errors.rs  main.rs
core/src/network/: mod.rs
core/src/network/api/: errors.rs  handler.rs  mod.rs
core/src/network/ws/: errors.rs  mod.rs
core/src/network/ws/messages/: mod.rs
core/src/utils/: mod.rs
docs/: api.md  ws.md
