[package]
name = "core"
description = "The core of the template"
version = "0.1.0"
authors = ["Westt <westtgamer@gmail.com>"]
edition = "2018"
homepage = "https://github.com/westtgamer/rust-vue-template"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "net", "sync"] }
warp = "0.2.5"
serde = { version = "1.0.116", features = ["derive", "rc"] }
serde_json = "1.0.59"
futures = { version = "0.3.6", default-features = false }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.7.3"